Update Case Study - Olympic Medals.ipynb

--- a/Case Study - Olympic Medals.ipynb
+++ b/Case Study - Olympic Medals.ipynb
@@ -2132,7 +2132,7 @@
    ],
    "source": [
     "# Plot the DataFrame usa_medals_by_year\n",
-    "usa_medals_by_year.plot.area()\n",
+    "usa_medals_by_year.plot()\n",
     "plt.show()"
    ]
   },
